--- a/style.css
+++ b/style.css
@@ -42,27 +42,56 @@ h1 {
     background-color: #e0e0e0;
 }
 
-@media (min-width: 402px) {
-    .calculator {
-        width: 400px; 
-    }
+.info-link {
+    text-align: center;
+    margin-top: 40px;
 }
 
+.info-link a {
+    text-decoration: none;
+    font-size: 16px;
+    color: #5e4c4c;
+    background-color: #d3d3d3;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    transition: background-color 0.3s;
+}
 
-@media (max-width: 401px) {
-    .calculator {
-        width: 600px; 
-        padding: 5px;
-    }
+.info-link a:hover {
+    background-color: #bdbdbd;
+}
 
-    .calculator input {
-        font-size: 14px;
-        padding: 8px;
-    }
+modal {
+    display: none; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9); 
+}
 
-    .calculator button {
-        flex: 1 1 100%;  
-        padding: 10px;
-        font-size: 14px;
-    }
+.modal-content {
+    backdrop-filter: blur(20px);
+    background-color: rgba(128, 124, 124, 0.2);
+    margin:  15px auto;
+    padding: 10px;
+    width: 400px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
